fixed navigation responsive layout issue

--- a/frontend/src/css/styles.scss
+++ b/frontend/src/css/styles.scss
@@ -37,6 +37,10 @@ code {
   color: $color;
 }
 
+.navbar-toggler {
+  background-color: $color;
+}
+
 #main {
   min-height: calc(100vh - 120px);
   background-color: #fff;
